# appris

./: .gitignore  CHANGELOG.md  INSTALL.md  INSTALL.txt  LICENSE.md  README.md  changelog.md  index.html  params.json
annotations/: .gitignore  README.md  README.txt  upload_datafiles.conf
cached/: .gitignore
care_www/: maintenance.html
check/: ftpData.rb  send_email.rb
code/: README.md  appris.pl  cappris.pl  iappris.pl
code/opt/kalign2/: Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  kalign  kalign2.h  kalign2_advanced_gaps.c  kalign2_advanced_gaps.h  kalign2_alignment_types.c  kalign2_conservation.c  kalign2_distance_calculation.c  kalign2_dp.c  kalign2_feature.c  kalign2_feature.h  kalign2_hirschberg.c  kalign2_hirschberg.h  kalign2_hirschberg_dna.c  kalign2_hirschberg_dna.h  kalign2_hirschberg_large.c  kalign2_hirschberg_large.h  kalign2_inferface.c  kalign2_input.c  kalign2_input.h  kalign2_main.c  kalign2_mem.c  kalign2_misc.c  kalign2_output.c  kalign2_output.h  kalign2_profile.c  kalign2_profile_alignment.c  kalign2_profile_alignment.h  kalign2_simple_gaps.c  kalign2_stats.c  kalign2_string_matching.c  kalign2_tree.c  kalign2_upgma.c
conf/: INSTRUCTIONS_byTom.md  README.md  apprisrc  apprisrc.WS  apprisrc.WS.loc  apprisrc.WS.pro  apprisrc.dev  apprisrc.doc  apprisrc.docker  apprisrc.loc  apprisrc.pro  config.json  methods.json  species_dict.json
data/: README.md
db/: .gitignore  README.md  README.txt
docker/: README.md
docs/: ANNOTATIONS.md  APPRIStechnicaldocument.doc  BIN.md  CODE.md  CONF.md  DATABASE.txt  (+4 more)
(+2659 files in other folders)
